[package]
name = "tokio-uds"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tokio-uds"
homepage = "https://github.com/tokio-rs/tokio-uds"
documentation = "https://docs.rs/tokio-uds"
description = """
Unix Domain sockets for Tokio
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "tokio-rs/tokio-uds" }
appveyor = { repository = "alexcrichton/tokio-uds" }

[dependencies]
bytes = "0.4"
futures = "0.1"
futures-core = { version = "=0.2.0-beta", optional = true }
futures-io = { version = "=0.2.0-beta", optional = true }
futures-sink = { version = "=0.2.0-beta", optional = true }
iovec = "0.1"
libc = "0.2"
log = "0.4"
mio = "0.6.14"
mio-uds = "0.6.4"
tokio-reactor = { version = "0.1.1" }
tokio-io = "0.1"

[features]
unstable-futures = ["futures-core", "futures-io", "futures-sink", "tokio-reactor/unstable-futures"]
